--- a/templates/chat.html
+++ b/templates/chat.html
@@ -1,17 +1,20 @@
 <html>
+<!DOCTYPE html>
+<html lang="en">
+
 <head>
     <meta charset="UTF-8"/>
     <title>Jetty WebSocket Chat</title>
     <script type="text/javascript" src="script.js"></script>
+    <link rel="stylesheet" type="text/css" href="chat_style.css">
 </head>
 <body onload="init();">
 <div id="body">
     <div id="menu">
         <p class="welcome">
-            Welcome, <input id="username" value="anonymous"/>
+            <!--Welcome, <input id="username" value="anonymous"/>-->
+            Welcome, <p id="user">${username}</p>
         </p>
-
-        <div style="clear: both"></div>
     </div>
 
     <div id="chatbox">
