--- a/templates/chat.html
+++ b/templates/chat.html
@@ -1,7 +1,4 @@
 <html>
-<!DOCTYPE html>
-<html lang="en">
-
 <head>
     <meta charset="UTF-8"/>
     <title>Jetty WebSocket Chat</title>
@@ -12,9 +9,11 @@
 <div id="body">
     <div id="menu">
         <p class="welcome">
-            <!--Welcome, <input id="username" value="anonymous"/>-->
-            Welcome, <p id="user">${username}</p>
+            Welcome,
+        <p id="username">${username}</p>
         </p>
+
+        <div style="clear: both"></div>
     </div>
 
     <div id="chatbox">
